<resources>
    <string name="app_name">SignUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="username_label">Username:</string>
    <string name="username_input_hint">Please enter your username</string>
    <string name="password_label">Password:</string>
    <string name="password_input_hint">Please enter a password</string>
    <string name="confirm_password_label">Confirm:</string>
    <string name="confirm_password_input_hint">Please confirm password</string>
    <string name="submit">Submit</string>
    <string name="random">Random</string>
</resources>
