<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/username_password_fields">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_field"
            android:layout_marginTop="5dp"

            >

            <TextView
                android:id="@+id/username_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/username_label"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/username_input"
                android:layout_weight="75"
                android:hint="@string/username_input_hint"
                android:layout_toRightOf="@id/username_label"
                android:layout_centerHorizontal="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_field"
            android:layout_marginTop="5dp"


            >

            <TextView
                android:id="@+id/password_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/password_input"
                android:layout_weight="75"
                android:hint="@string/password_input_hint"
                android:layout_toRightOf="@id/password_label"
                android:layout_centerHorizontal="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_password_field"
            android:layout_marginTop="5dp"


            >

            <TextView
                android:id="@+id/confirm_password_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password_label"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/confirm_password_input"
                android:layout_weight="75"
                android:hint="@string/confirm_password_input_hint"
                android:layout_toRightOf="@id/password_label"
                android:layout_centerHorizontal="true"
                android:layout_width="odp"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>



    <Button
        android:id="@+id/submit_button"
        android:layout_below="@id/username_password_fields"
        android:layout_centerHorizontal="true"
        android:layout_alignRight="@id/username_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        android:text="@string/submit"
        android:textSize="24sp"/>






</RelativeLayout>
